--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-issue-pull-api-hook ",
+  "name": "github-issue-pull-api-hook",
   "version": "0.0.0",
   "private": true,
   "description": "TypeScript template action",
@@ -8,10 +8,9 @@
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run package && npm test"
   },
   "repository": {
     "type": "git",
@@ -35,11 +34,7 @@
     "@types/got": "^9.6.12",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.9",
-    "@typescript-eslint/parser": "^4.29.1",
     "@vercel/ncc": "^0.25.1",
-    "eslint": "^7.17.0",
-    "eslint-plugin-github": "^4.1.1",
-    "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "js-yaml": "^3.14.0",
