--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@vercel/ncc": "^0.25.1",
     "jest": "^27.1.0",
     "jest-circus": "^27.1.0",
-    "prettier": "2.3.2",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.1.3"
   }
