--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@actions/core": "1.9.1",
     "@actions/github": "5.1.0",
-    "got": "12.3.1",
+    "got": "11.8.6",
     "octokit": "1.8.1"
   },
   "devDependencies": {
@@ -37,8 +37,10 @@
     "@vercel/ncc": "0.34.0",
     "jest": "28.1.3",
     "jest-circus": "28.1.3",
+    "nodemon": "^2.0.20",
     "prettier": "2.7.1",
     "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
     "typescript": "4.7.4"
   }
 }
